MakerDAO message support

--- a/lib/firmware/CMakeLists.txt
+++ b/lib/firmware/CMakeLists.txt
@@ -8,8 +8,9 @@ set(sources
     eos-contracts/eosio.token.c
     ethereum.c
     ethereum_contracts.c
+    ethereum_contracts/erc721.c
+    ethereum_contracts/makerdao.c
     ethereum_tokens.c
-    erc721.c
     exchange.c
     fsm.c
     home_sm.c
